--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ivanseed.github.io",
   "version": "0.1.0",
+  "homepage": "https://ivanseed.github.io/personal-portfolio",
   "private": true,
   "dependencies": {
     "node-sass-chokidar": "0.0.3",
@@ -9,13 +10,14 @@
     "smoothscroll-polyfill": "^0.3.5"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "react-snapshot": "^1.2.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && react-snapshot",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
