Adds CSS Shadow and new label

--- a/src/projects.json
+++ b/src/projects.json
@@ -45,6 +45,9 @@
                 "text": "PreactJS"
             },
             {
+                "text": "HTML"
+            },
+            {
                 "text": "CSS"
             }
         ],
